Item 024: the JVM is a target, not a model; Valhalla front and center
docs/design.md opens on Valhalla: every Lumen value is a value, nothing has
identity, equality is by state where a type asks for it, and no built-in type
is special. Section 1 gains a Valhalla goal, section 2 states the rule as
prose with what it rules out (the object model, the eight special primitives,
observable boxing, erasure), section 8 makes `==` an `Eq` with the three 0.1
instances, and section 9 says a record is a value with no identity.
docs/principles.md question 6 cites the rule; docs/implementation.md names
JDK 28, class-file version 72 in preview, and `--enable-preview` on a run.
README and AGENTS.md carry the new tagline.